Add initial version of monograph publisher request update endpoint
