# apidoc/openapi.json
@@ -721,6 +721,59 @@
             "$ref": "#/components/responses/error"
           }
         }
+      },
+      "patch": {
+        "operationId": "updateMonographPublicationRequest",
+        "summary": "Update Monograph publication request information. Note changing publisher or publication association cannot be done using this endpoint.",
+        "security": [
+          {
+            "openId": [
+              "admin"
+            ]
+          }
+        ],
+        "tags": [
+          "monograph",
+          "monograph-publication-request"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/monograph-publication-request-update-body"
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/id"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Resource was updated"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Resource was not found"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "422": {
+            "description": "Unprocessable entity"
+          },
+          "default": {
+            "$ref": "#/components/responses/error"
+          }
+        }
       }
     }
   },
@@ -2411,6 +2464,92 @@
             "$ref": "#/components/schemas/created-metadata"
           }
         ]
+      },
+      "monograph-publication-request-update-body": {
+        "type": "object",
+        "properties": {
+          "official_name": {
+            "type": "string",
+            "maximum": 100
+          },
+          "publisher_identifier_str": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "maximum": 20
+          },
+          "locality": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "address": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "zip": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "city": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "contact_person": {
+            "type": "string",
+            "maximum": 100
+          },
+          "phone": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "maximum": 30
+          },
+          "email": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "maximum": 100
+          },
+          "lang_code": {
+            "$ref": "#/components/schemas/lang-code"
+          },
+          "published_before": {
+            "type": "boolean"
+          },
+          "publications_public": {
+            "type": "boolean"
+          },
+          "publications_intra": {
+            "type": "boolean"
+          },
+          "publishing_activity": {
+            "$ref": "#/components/schemas/publishing-activity"
+          },
+          "publishing_activity_amount": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "comments": {
+            "maximum": 2000,
+            "type": [
+              "string",
+              "null"
+            ]
+          }
+        }
       }
     },
     "responses": {
